[gd_scene load_steps=5 format=3 uid="uid://biyshalfalqqw"]

[ext_resource type="Script" path="res://addons/AsepriteWizard/interface/docks/sprite/animation_player_inspector_dock.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://x1f1t87m582u" path="res://addons/AsepriteWizard/interface/shared/animation_player_drop_button.tscn" id="2_nfeqc"]
[ext_resource type="PackedScene" uid="uid://dj1uo3blocr8e" path="res://addons/AsepriteWizard/interface/shared/source_drop_button.tscn" id="2_pj0v0"]
[ext_resource type="PackedScene" uid="uid://cwvgnm3o7eed2" path="res://addons/AsepriteWizard/interface/shared/dir_drop_button.tscn" id="4_jb8bn"]

[node name="sprite_inspector_dock" type="PanelContainer"]
offset_right = 14.0
offset_bottom = 14.0
script = ExtResource("1")

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="margin"]
layout_mode = 2

[node name="section_title" type="PanelContainer" parent="margin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="title" type="Label" parent="margin/VBoxContainer/section_title"]
layout_mode = 2
size_flags_horizontal = 3
text = "Aseprite"
horizontal_alignment = 1

[node name="animation_player" type="HBoxContainer" parent="margin/VBoxContainer"]
layout_mode = 2
tooltip_text = "AnimationPlayer  node where animations should be added to."

[node name="Label" type="Label" parent="margin/VBoxContainer/animation_player"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "AnimationPlayer"

[node name="options" parent="margin/VBoxContainer/animation_player" instance=ExtResource("2_nfeqc")]
layout_mode = 2

[node name="source" type="HBoxContainer" parent="margin/VBoxContainer"]
layout_mode = 2
tooltip_text = "Location of the Aseprite (*.ase, *.aseprite)  source file."

[node name="Label" type="Label" parent="margin/VBoxContainer/source"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Aseprite File"

[node name="button" parent="margin/VBoxContainer/source" instance=ExtResource("2_pj0v0")]
layout_mode = 2

[node name="layer" type="HBoxContainer" parent="margin/VBoxContainer"]
layout_mode = 2
tooltip_text = "Aseprite layer to be used in the animation. By default all layers are included."

[node name="Label" type="Label" parent="margin/VBoxContainer/layer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Layer"

[node name="options" type="OptionButton" parent="margin/VBoxContainer/layer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
item_count = 1
selected = 0
popup/item_0/text = "[all]"
popup/item_0/id = 0

[node name="options_title" type="PanelContainer" parent="margin/VBoxContainer"]
layout_mode = 2

[node name="options_title" type="Button" parent="margin/VBoxContainer/options_title"]
layout_mode = 2
toggle_mode = true
text = "Options"

[node name="options" type="VBoxContainer" parent="margin/VBoxContainer"]
visible = false
layout_mode = 2

[node name="out_folder" type="HBoxContainer" parent="margin/VBoxContainer/options"]
layout_mode = 2
tooltip_text = "Location where the spritesheet file should be saved."

[node name="Label" type="Label" parent="margin/VBoxContainer/options/out_folder"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Output folder"

[node name="button" parent="margin/VBoxContainer/options/out_folder" instance=ExtResource("4_jb8bn")]
layout_mode = 2

[node name="out_filename" type="HBoxContainer" parent="margin/VBoxContainer/options"]
layout_mode = 2
tooltip_text = "Base filename for spritesheet. In case the layer option is used, this works as a prefix to the layer name."

[node name="Label" type="Label" parent="margin/VBoxContainer/options/out_filename"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Output file name"

[node name="LineEdit" type="LineEdit" parent="margin/VBoxContainer/options/out_filename"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ex_pattern" type="HBoxContainer" parent="margin/VBoxContainer/options"]
layout_mode = 2
tooltip_text = "Exclude layers with name matching this pattern (regex)."

[node name="Label" type="Label" parent="margin/VBoxContainer/options/ex_pattern"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Exclude pattern"

[node name="LineEdit" type="LineEdit" parent="margin/VBoxContainer/options/ex_pattern"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="keep_length" type="HBoxContainer" parent="margin/VBoxContainer/options"]
layout_mode = 2
tooltip_text = "When this is active the animation length won't be adjusted if other properties were added and the resulting imported animation is shorter."

[node name="Label" type="Label" parent="margin/VBoxContainer/options/keep_length"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Keep manual animation length"

[node name="CheckButton" type="CheckButton" parent="margin/VBoxContainer/options/keep_length"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="visible_layers" type="HBoxContainer" parent="margin/VBoxContainer/options"]
layout_mode = 2
tooltip_text = "If active, layers not visible in the source file won't be included in the final image."

[node name="Label" type="Label" parent="margin/VBoxContainer/options/visible_layers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Only visible layers"

[node name="CheckButton" type="CheckButton" parent="margin/VBoxContainer/options/visible_layers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="auto_visible_track" type="HBoxContainer" parent="margin/VBoxContainer/options"]
layout_mode = 2
tooltip_text = "If active, it will automatically determine unused Sprite2D and Sprite3D nodes in each animation and hide them."

[node name="Label" type="Label" parent="margin/VBoxContainer/options/auto_visible_track"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Hide unused sprites"

[node name="CheckButton" type="CheckButton" parent="margin/VBoxContainer/options/auto_visible_track"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="import" type="Button" parent="margin/VBoxContainer"]
layout_mode = 2
text = "Import"

[connection signal="button_down" from="margin/VBoxContainer/animation_player/options" to="." method="_on_options_button_down"]
[connection signal="item_selected" from="margin/VBoxContainer/animation_player/options" to="." method="_on_options_item_selected"]
[connection signal="node_dropped" from="margin/VBoxContainer/animation_player/options" to="." method="_on_animation_player_node_dropped"]
[connection signal="aseprite_file_dropped" from="margin/VBoxContainer/source/button" to="." method="_on_source_aseprite_file_dropped"]
[connection signal="pressed" from="margin/VBoxContainer/source/button" to="." method="_on_source_pressed"]
[connection signal="button_down" from="margin/VBoxContainer/layer/options" to="." method="_on_layer_button_down"]
[connection signal="item_selected" from="margin/VBoxContainer/layer/options" to="." method="_on_layer_item_selected"]
[connection signal="toggled" from="margin/VBoxContainer/options_title/options_title" to="." method="_on_options_title_toggled"]
[connection signal="dir_dropped" from="margin/VBoxContainer/options/out_folder/button" to="." method="_on_out_dir_dropped"]
[connection signal="pressed" from="margin/VBoxContainer/options/out_folder/button" to="." method="_on_out_folder_pressed"]
[connection signal="pressed" from="margin/VBoxContainer/import" to="." method="_on_import_pressed"]
